# test-cpp-yocto

./: CMakeLists.txt  README.md  test_ObsDesign.cpp  test_ObsDesign.h
